--- a/ionic.config.json
+++ b/ionic.config.json
@@ -1,6 +1,5 @@
 {
   "name": "ionic-unit-testing-example",
   "integrations": {},
-  "type": "ionic-angular",
-  "app_id": ""
+  "type": "ionic-angular"
 }
